[REFACT] 로직 수정